@@ -1,6 +1,6 @@
-event_id,rup_id,year,rlzi,magnitude,centroid_lon,centroid_lat,centroid_depth,structural,structural_ins
-476741369856,111,1,0,5.15000E+00,-1.22000E+02,3.81889E+01,1.00000E+00,1.88664E+02,0.00000E+00
-837518622720,195,1,0,5.25000E+00,-1.22000E+02,3.80809E+01,8.00000E+00,8.08982E+02,0.00000E+00
-1292785156096,301,1,0,5.45000E+00,-1.22000E+02,3.81799E+01,1.00000E+01,2.67559E+02,0.00000E+00
-1842540969984,429,1,0,5.85000E+00,-1.22000E+02,3.81079E+01,5.00000E+00,6.24306E+02,0.00000E+00
-2203318222848,513,1,0,6.25000E+00,-1.22000E+02,3.80989E+01,8.00000E+00,3.12615E+02,0.00000E+00
+event_id,rup_id,year,magnitude,centroid_lon,centroid_lat,centroid_depth,structural,structural_ins
+476741369856,111,1,5.15000E+00,-1.22000E+02,3.81889E+01,1.00000E+00,1.88664E+02,0.00000E+00
+837518622720,195,1,5.25000E+00,-1.22000E+02,3.80809E+01,8.00000E+00,8.08982E+02,0.00000E+00
+1292785156096,301,1,5.45000E+00,-1.22000E+02,3.81799E+01,1.00000E+01,2.67559E+02,0.00000E+00
+1842540969984,429,1,5.85000E+00,-1.22000E+02,3.81079E+01,5.00000E+00,6.24306E+02,0.00000E+00
+2203318222848,513,1,6.25000E+00,-1.22000E+02,3.80989E+01,8.00000E+00,3.12615E+02,0.00000E+00
